# online-fine-tuning-solver

./: .autopep8  .clang-format  .githooks  .gitignore  .gitmodules  .opening.txt  CMakeLists.txt  README.md
config/: manager.cfg  trainer.cfg  worker.cfg
docs/: Development-Environment.md  Launch-the-Distributed-Solver.md  Launch-the-Standalone-Solver.md  Tools.md  Train-PCN-Models-for-the-Solver.md
game_solver/: CMakeLists.txt  gs_console.cpp  gs_console.h  gs_mode_handler.cpp  gs_mode_handler.h  main.cpp
game_solver/common/: CMakeLists.txt  gs_bitboard.h  gs_configuration.cpp  gs_configuration.h  gs_hashkey.cpp  gs_hashkey.h  open_address_hash_table.h  sgf_tree_loader.cpp  sgf_tree_loader.h  stop_timer.h
game_solver/manager/: CMakeLists.txt  broker_adapter.cpp  broker_adapter.h  job_handler.cpp  job_handler.h  manager.cpp  manager.h
game_solver/trainer/: CMakeLists.txt  gs_actor.cpp  gs_actor.h  gs_actor_group.cpp  gs_actor_group.h  gs_mcts.cpp  gs_mcts.h  proof_cost_network.h  trainer_server.cpp  trainer_server.h
game_solver/worker/: CMakeLists.txt  solver.h  solver_group.cpp  solver_group.h  tree_logger.cpp  tree_logger.h
scripts/: build.sh  extract-main-stat.sh  game-solver-trainer.sh  parse-manager-results.sh  run-manager.sh  run-workers.sh  setup-solver-tmux-session.sh  sgf_editor.py  solver-wrapper.sh  start-container.sh  stop-solver-tmux-components.sh  zero-server.sh  zero-worker.sh
scripts/chat/: broker.sh  chat.sh  start-service.sh  trainer.sh  worker.sh
scripts/nn_evaluation/: eval_result_format.py  run-nn-evaluation.sh
(+25 files in other folders)
